Domibus 5.0
- On the Domibus Admin Console, the Messages page displays by default only messages exchanged in the past hour
- Update retry mechanism to consider the retry timeout
- Add alert when expired partition cannot be deleted
- New RetentionWorker to delete entire expired partition
- Add message tables partitioning sql scripts
- EARCHIVING: allows archiving messages sent / received
- ProcessingType allowing to specify if the message should be pushed or pulled has been added in all the domibus plugins.
- new sequence for id generation (in Oracle: sequence, in mysql H2: Table) of the format: yyMMddHHDDDDDDDDDD (ex: 210809150000000050)
- Switch to using UTC to save timestamp values.
- All date time values missing a timezone offset received from Domibus clients are considered to be in UTC offset; all
of the following values point to the same instant - the 21st of July 2021, 12:27:00 [UTC] -:
    - a date value of "2021-07-21T14:27:00+02:00" will be interpreted to have an offset of +02:00;
    - a date value of "2021-07-21T12:27:00" will be interpreted to be in the UTC timezone with a +00:00 offset.
- Update all libraries to the latest version: Apache CXF 3.4.0, Ehcache 3.8.1, Hibernate Validator 6.1.5.Final, ActiveMQ 5.16.0, etc
- Added a new property domibus.connection.cxf.ssl.offload.enable to allow support for offloading the SSL onto a forward SSL proxy
- WS Plugin listPendingMessages Request will accept following optional parameters in order to filter the pending messages: messageId, conversationId, refToMessageId, fromPartyId, finalRecipient, originalSender, receivedFrom and receivedTo
- WS Plugin can push notifications to a backend web service (notifications and submit message)
- [Mysql8 only]
    - Mysql8 versions older than 8.0.24 throw "ERROR 1067: Invalid default value", if UTC_TIMESTAMP set as default value for timestamp columns when execute 'mysql-5.0-SNAPSHOT.ddl' scripts.
        - This is due to a bug(#101486) in the older mysql8 versions.