@@ -117,9 +117,6 @@ ALTER INDEX IDX_FK_REV_CHANGES_REV_INFO RENAME TO OLD_IDX_FK_REV_CHNGS_REV_INFO
 ALTER INDEX IDX_FK_CERTIFICATE_AUD_REV RENAME TO OLD_IDX_FK_CERTIFICATE_AUD_REV
 /
 
-ALTER INDEX IDX_COMMAND_PROP_COMMAND_ID RENAME TO OLD_IDX_COMMAND_PROP_CMD_ID
-/
-
 ALTER INDEX IDX_FK_ACTION_BP RENAME TO OLD_IDX_FK_ACTION_BP
 /
 
@@ -318,13 +315,7 @@ ALTER INDEX IDX_FK_JOIN_PROPERTY_SET RENAME TO OLD_IDX_FK_JOIN_PROPERTY_SET
 ALTER INDEX IDX_FK_PARTY_IDENT_ID_TYPE RENAME TO OLD_IDX_FK_PARTY_IDENT_ID_TYPE
 /
 
-ALTER INDEX IDX_FK_EVENT RENAME TO OLD_IDX_FK_EVENT
-/
-
 ALTER INDEX IDX_FK_BACKEND_FTR_AUD_REV RENAME TO OLD_IDX_FK_BACKEND_FTR_AUD_REV
-/
-
-ALTER INDEX IDX_USER_ID RENAME TO OLD_IDX_USER_ID
 /
 
 ALTER TABLE TB_CERTIFICATE RENAME CONSTRAINT UK_CERTIFICATE_ALIAS TO OLD_UK_CERTIFICATE_ALIAS
@@ -752,9 +743,6 @@ ALTER INDEX UK_ROLE_NAME RENAME TO OLD_UK_ROLE_NAME
                                  constraintName="FK_MSG_PROPS_MSG_PROP" deferrable="false"
                                  initiallyDeferred="false" onDelete="RESTRICT" onUpdate="RESTRICT"
                                  referencedColumnNames="ID_PK" referencedTableName="TB_D_MESSAGE_PROPERTY"/>
-        <createIndex indexName="IDX_MSG_PROPS_MSG_ID" tableName="TB_MESSAGE_PROPERTIES">
-            <column name="USER_MESSAGE_ID_FK"/>
-        </createIndex>
         <createIndex indexName="IDX_MSG_PROPS_MSG_PROP" tableName="TB_MESSAGE_PROPERTIES">
             <column name="MESSAGE_PROPERTY_FK"/>
         </createIndex>
@@ -777,9 +765,6 @@ ALTER INDEX UK_ROLE_NAME RENAME TO OLD_UK_ROLE_NAME
                                  constraintName="FK_PART_PROPS_PART_PROP" deferrable="false"
                                  initiallyDeferred="false" onDelete="RESTRICT" onUpdate="RESTRICT"
                                  referencedColumnNames="ID_PK" referencedTableName="TB_D_PART_PROPERTY"/>
-        <createIndex indexName="IDX_PART_PROPS_PART_INFO" tableName="TB_PART_PROPERTIES">
-            <column name="PART_INFO_ID_FK"/>
-        </createIndex>
         <createIndex indexName="IDX_PART_PROPS_PART_PROP" tableName="TB_PART_PROPERTIES">
             <column name="PART_INFO_PROPERTY_FK"/>
         </createIndex>
@@ -880,9 +865,6 @@ ALTER INDEX UK_ROLE_NAME RENAME TO OLD_UK_ROLE_NAME
                                  constraintName="FK_COMMAND_PROPERTY_ID" deferrable="false"
                                  initiallyDeferred="false" onDelete="RESTRICT" onUpdate="RESTRICT"
                                  referencedColumnNames="ID_PK" referencedTableName="TB_COMMAND"/>
-        <createIndex indexName="IDX_COMMAND_PROP_COMMAND_ID" tableName="TB_COMMAND_PROPERTY">
-            <column name="FK_COMMAND"/>
-        </createIndex>
         <addUniqueConstraint columnNames="FK_COMMAND, PROPERTY_NAME" constraintName="UK_COMMAND_PROP_NAME"
                              tableName="TB_COMMAND_PROPERTY"/>
 
@@ -1363,9 +1345,6 @@ ALTER INDEX UK_ROLE_NAME RENAME TO OLD_UK_ROLE_NAME
                                  referencedColumnNames="ID_PK" referencedTableName="TB_EVENT"/>
         <createIndex indexName="IDX_FK_ALERT" tableName="TB_EVENT_ALERT">
             <column name="FK_ALERT"/>
-        </createIndex>
-        <createIndex indexName="IDX_FK_EVENT" tableName="TB_EVENT_ALERT">
-            <column name="FK_EVENT"/>
         </createIndex>
 
         <!-- TB_EVENT_PROPERTY -->
