@@ -1,4 +1,5 @@
 Domibus 5.0
+- Remove overlaping indexes.
 - On the Domibus Admin Console, the Messages page displays by default only messages exchanged in the past hour
 - Update retry mechanism to consider the retry timeout
 - Add alert when expired partition cannot be deleted
